--- a/css/style.css
+++ b/css/style.css
@@ -523,6 +523,23 @@ footer a img{
         width: 90%;
     }
 }
+@media screen and (max-width:1200px){
+    .perfil-jenni{
+        flex-direction: column;
+    }
+    .perfil-jenni h2{
+        font-size: 27px;
+    }
+    .perfil-jenni div p{
+        font-size: 16px;
+        width: 225%;
+    }
+    .perfil-jenni div img{
+        width: 100px;
+    }
+}
+
+
 
 /*! BOOTSTRAP PERFIL*/
 
