cambios funcionalidades variables componentes

--- a/scss/base/_funcionalidades.scss
+++ b/scss/base/_funcionalidades.scss
@@ -2,3 +2,7 @@
 $color-1: black;
 $color-2: skyblue;
 $color-3: white;
+$color-4: rgb(8, 158, 218);
+$color-5: rgb(255, 255, 255);
+$color-6: gray;
+$color-7: rgba(0,0,0,0.75);
