--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -9,15 +9,15 @@
     box-sizing: border-box;
 }
 .boton{
-    background-color: skyblue;
-    color: white;
+    background-color: $color-2;
+    color: $color-3;
     text-decoration: none;
     font-weight: 600;
     border: 2px;
     padding: 12px;
     border-radius: 20px;
     &:hover{
-        background-color: white;
-        color: skyblue;
+        background-color: $color-3;
+        color: $color-2;
     }
 }
