--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -18,7 +18,7 @@
             font-style: normal;
             font-size: 30px;
             font-weight: 500;
-            color: black;
+            color: $color-1;
         }
         p{
             font-weight: 500;
@@ -53,7 +53,7 @@
                     list-style: none;
                     margin: 5px 7px 10px 7px;
                     a{
-                        color:black;
+                        color: $color-1;
                         letter-spacing: 0,05cm;
                         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
                         font-size: 13px;
@@ -62,7 +62,7 @@
                         justify-self:center;
                         text-decoration: none;
                         &:hover{
-                            color: skyblue;
+                            color: $color-2;
                         }
                     }
                 }
