--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,5 @@
 header{
-    background-color:white;
+    background-color: $color-3;
     background-image: url("../img/img-fondo.webp");
     padding: 10px;
     position: sticky;
@@ -25,7 +25,7 @@ header{
                 a{
                     text-decoration: none;
                     &:hover{
-                        color: skyblue;
+                        color: $color-2;
                     }
                 }
     }
@@ -33,7 +33,7 @@ header{
 .barra{
     li{
         a{
-            color:black;
+            color: $color-1;
             letter-spacing: 0,05cm;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-size: 13px;
@@ -61,7 +61,7 @@ header{
         align-items: center;
     }
         h2{
-            color:white;
+            color: $color-3;
             background-color: rgba(0, 0, 0, 0.164);
             font-family: cursive;
             font-family: "Bitter", serif;
@@ -71,8 +71,8 @@ header{
             border-radius: 50px;
         }
         p{
-            background-color: white;
-            color: black;
+            background-color: $color-3;
+            color: $color-1;
             font-size: 27px;
             font-family: impact, sans-serif;
             font-style: italic;
@@ -83,8 +83,8 @@ header{
         }
 }
 .boton-a{
-    background-color:skyblue;
-    color: white;
+    background-color: $color-2;
+    color: $color-3;
     font-size: 20px;
     font-family:Arial, Helvetica, sans-serif;
     font-style:normal;
@@ -96,7 +96,7 @@ header{
     border-radius: 20px;
     margin-top: 9%;
     &:hover{
-        background-color: white;
-        color: skyblue;
+        background-color: $color-3;
+        color: $color-2;
     }
 }
