--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,26 @@
 /*VARIABLES*/
+/*LISTAS*/
+/* EXTENDS */
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bitter:ital,wght@0,100..900;1,100..900&family=Cinzel:wght@400..900&family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+.esperar-terapia div, .porque-terapia div, .terapia div {
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+}
+
+.boton {
+  text-decoration: none;
+  font-weight: 600;
+  border: 2px;
+  padding: 12px;
+  border-radius: 20px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -13,11 +30,6 @@
 .boton {
   background-color: skyblue;
   color: white;
-  text-decoration: none;
-  font-weight: 600;
-  border: 2px;
-  padding: 12px;
-  border-radius: 20px;
 }
 .boton:hover {
   background-color: white;
@@ -57,7 +69,7 @@ header nav a:hover {
   color: black;
   letter-spacing: 0, 5cm;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 13px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 1;
   font-weight: 700;
   letter-spacing: 4px;
 }
@@ -86,14 +98,14 @@ header nav a:hover {
   font-family: cursive;
   font-family: "Bitter", serif;
   font-weight: 350;
-  font-size: 80px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 4;
   margin-bottom: 0px;
   border-radius: 50px;
 }
 .hero p {
   background-color: white;
   color: black;
-  font-size: 27px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 3;
   font-family: impact, sans-serif;
   font-style: italic;
   font-weight: normal;
@@ -105,7 +117,7 @@ header nav a:hover {
 .boton-a {
   background-color: skyblue;
   color: white;
-  font-size: 20px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 2;
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -132,7 +144,7 @@ body {
 
 h2 {
   color: rgb(8, 158, 218);
-  font-size: 46px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 5;
   font-weight: normal;
   border: black 10px;
   margin: 20px;
@@ -151,15 +163,9 @@ p {
   margin: 30px;
   flex-direction: row-reverse;
 }
-.terapia div {
-  width: 50%;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-}
 .terapia div h2 {
   color: rgb(8, 158, 218);
-  font-size: 46px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 5;
   font-weight: normal;
   border: black 10px;
   margin: 20px;
@@ -169,7 +175,7 @@ p {
 .terapia div p {
   background-color: white;
   font-weight: lighter;
-  font-size: 20px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 2;
   word-spacing: 2px;
   margin-bottom: 20px;
   text-align: justify;
@@ -177,7 +183,7 @@ p {
   margin-right: 20%;
 }
 .terapia div p::first-letter {
-  font-size: 50px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 6;
 }
 .terapia div img {
   width: 350px;
@@ -192,14 +198,8 @@ p {
   display: flex;
   margin: 30px;
 }
-.porque-terapia div {
-  width: 50%;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-}
 .porque-terapia div h3 {
-  font-size: 46px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 5;
   font-weight: normal;
   color: rgb(8, 158, 218);
   margin: 15px;
@@ -208,14 +208,14 @@ p {
 .porque-terapia div p {
   background-color: white;
   font-weight: lighter;
-  font-size: 20px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 2;
   word-spacing: 2px;
   margin-bottom: 20px;
   text-align: justify;
   padding: 15px;
 }
 .porque-terapia div p::first-letter {
-  font-size: 50px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 6;
 }
 .porque-terapia img {
   width: 634px;
@@ -230,14 +230,8 @@ p {
   margin: 30px;
   flex-direction: row-reverse;
 }
-.esperar-terapia div {
-  width: 50%;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-}
 .esperar-terapia div h3 {
-  font-size: 46px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 5;
   font-weight: normal;
   color: rgb(8, 158, 218);
   margin: 15px;
@@ -246,14 +240,14 @@ p {
 .esperar-terapia div p {
   background-color: rgb(255, 255, 255);
   font-weight: lighter;
-  font-size: 20px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 2;
   word-spacing: 2px;
   margin-bottom: 20px;
   text-align: justify;
   padding: 15px;
 }
 .esperar-terapia div p::first-letter {
-  font-size: 50px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 6;
 }
 .esperar-terapia img {
   width: 634px;
@@ -299,7 +293,7 @@ p {
 }
 .servicios .servicios-psico div h3 {
   color: rgb(8, 158, 218);
-  font: 16px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 7;
   padding-bottom: 20px;
   font-weight: 600;
 }
@@ -338,7 +332,7 @@ p {
 .grid-pie .grid2 h2 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-style: normal;
-  font-size: 30px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 8;
   font-weight: 500;
   color: black;
 }
@@ -373,7 +367,7 @@ p {
   color: black;
   letter-spacing: 0, 5cm;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 13px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 1;
   font-weight: 700;
   letter-spacing: 4px;
   justify-self: center;
