--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -11,11 +11,7 @@
 .boton{
     background-color: $color-2;
     color: $color-3;
-    text-decoration: none;
-    font-weight: 600;
-    border: 2px;
-    padding: 12px;
-    border-radius: 20px;
+    @extend %boton;
     &:hover{
         background-color: $color-3;
         color: $color-2;
