--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -36,7 +36,7 @@ header{
             color: $color-1;
             letter-spacing: 0,05cm;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-size: 13px;
+            font-size: nth ($font-size, 1);
             font-weight: 700;
             letter-spacing: 4px;
         }
@@ -66,14 +66,14 @@ header{
             font-family: cursive;
             font-family: "Bitter", serif;
             font-weight:350;
-            font-size: 80px;
+            font-size: nth ($font-size, 4);
             margin-bottom: 0px;
             border-radius: 50px;
         }
         p{
             background-color: $color-3;
             color: $color-1;
-            font-size: 27px;
+            font-size: nth ($font-size, 3);
             font-family: impact, sans-serif;
             font-style: italic;
             font-weight: normal;
@@ -85,7 +85,7 @@ header{
 .boton-a{
     background-color: $color-2;
     color: $color-3;
-    font-size: 20px;
+    font-size: nth ($font-size, 2);
     font-family:Arial, Helvetica, sans-serif;
     font-style:normal;
     font-weight: 500;
