--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -7,7 +7,7 @@ body{
 }
 h2{
     color: $color-4;
-    font-size: 46px;
+    font-size: nth ($font-size, 5);
     font-weight: normal;
     border: $color-1 10px;
     margin: 20px;
@@ -24,13 +24,10 @@ p{
     margin: 30px;
     flex-direction: row-reverse;    
         div{
-            width: 50%;
-            justify-content: center;
-            align-items: center;
-            padding: 15px;
+            @extend %center;
                 h2{
                     color: $color-4;
-                    font-size: 46px;
+                    font-size: nth ($font-size, 5);
                     font-weight: normal;
                     border: $color-1 10px;
                     margin: 20px;
@@ -40,14 +37,14 @@ p{
                 p{
                     background-color: $color-3;
                     font-weight: lighter;
-                    font-size: 20px;
+                    font-size: nth ($font-size, 2);
                     word-spacing: 2px;
                     margin-bottom: 20px;
                     text-align: justify;
                     padding: 15px;
                     margin-right: 20%;
                     &::first-letter{
-                        font-size: 50px;
+                        font-size: nth ($font-size, 6);
                     }
                 }
                 img{
@@ -64,12 +61,9 @@ p{
     display: flex;
     margin: 30px;
     div{
-        width: 50%;
-        justify-content: center;
-        align-items: center;
-        padding: 15px;
+        @extend %center;
         h3{
-            font-size: 46px;
+            font-size: nth ($font-size, 5);
             font-weight: normal;
             color: $color-4;
             margin: 15px;
@@ -78,13 +72,13 @@ p{
         p{
             background-color: $color-3;
             font-weight: lighter;
-            font-size: 20px;
+            font-size: nth ($font-size, 2);
             word-spacing: 2px;
             margin-bottom: 20px;
             text-align: justify;
             padding: 15px;
             &::first-letter{
-                font-size: 50px;
+                font-size: nth ($font-size, 6);
             }
         }
     }
@@ -101,12 +95,9 @@ p{
     margin: 30px;
     flex-direction: row-reverse;
     div{
-        width: 50%;
-        justify-content: center;
-        align-items: center;
-        padding: 15px;
+        @extend %center;
         h3{
-            font-size: 46px;
+            font-size: nth ($font-size, 5);
             font-weight: normal;
             color: $color-4;
             margin: 15px;
@@ -115,13 +106,13 @@ p{
         p{
             background-color: $color-5;
             font-weight: lighter;
-            font-size: 20px;
+            font-size: nth ($font-size, 2);
             word-spacing: 2px;
             margin-bottom: 20px;
             text-align: justify;
             padding: 15px;
             &::first-letter{
-                font-size: 50px;
+                font-size: nth ($font-size, 6);
             }
         }
     }
@@ -164,7 +155,7 @@ p{
         -moz-box-shadow: 10px 10px 5px 0px $color-7;
             h3{
                 color: $color-4;
-                font: 16px;
+                font-size: nth ($font-size, 7);
                 padding-bottom: 20px;
                 font-weight: 600;
             }
