cambios generales transition

--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,8 @@ p{
     border: 2px;
     padding: 12px;
     border-radius: 20px;
+    transition-property: all;
+    transition-duration: 1s;
 }
 .boton:hover{
     background-color: white;
