--- a/estilos.css
+++ b/estilos.css
@@ -30,6 +30,8 @@
 .boton {
   background-color: skyblue;
   color: white;
+  transition-property: all;
+  transition-duration: 1s;
 }
 .boton:hover {
   background-color: white;
