--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -12,6 +12,8 @@
     background-color: $color-2;
     color: $color-3;
     @extend %boton;
+    transition-property: all;
+    transition-duration: 1s;
     &:hover{
         background-color: $color-3;
         color: $color-2;
