--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,10 @@ footer a img{
         display: flex;
         flex-direction: column;
         width: 100%;
-        overflow-x: hidden;
+    }
+    .perfil-jenni div{
+        margin-left: -2%;
+        margin-bottom: 10%;
     }
     .perfil-jenni h2{
         font-size: 27px;
@@ -536,10 +539,16 @@ footer a img{
         font-size: 16px;
         width: 215%;
     }
-    .perfil-jenni img{
-        width: 350px;
-        height: 450px;
-        object-fit: cover;
+    .perfil-jenni-foto{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 30%;
+    }
+    .perfil-jenni-foto img{
+        max-width: 150%;
+        height: auto;
+        margin-right: 15%;
     }
     .grid-pie1{
         grid-template-rows: 1fr;
