correciones en todo el proyecto para la tercera pre entrega

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header{
     align-items: center;
     z-index: 1;
 }
-header img{
+img{
     width: 170px;
     height: 170px;
 } 
@@ -47,8 +47,6 @@ header nav ul li a:hover{
     font-weight: 700;
     letter-spacing: 4px;
 }
-
-/*!---MAIN---*/
 
 body{
     background-color: white;
@@ -88,7 +86,7 @@ p{
     border-radius: 50px;
     padding: 8px;
 }
-.hero h2{
+.hero h1{
     color:white;
     background-color: rgba(0, 0, 0, 0.164);
     font-family: cursive;
@@ -120,11 +118,16 @@ p{
     padding-right: 20px;
     border-radius: 20px;
     margin-top: 9%;
+    transition-property: all;
+    transition-duration: 1s;
 }
 .boton-a:hover{
     background-color: white;
     color: skyblue;
 }
+
+/*!---MAIN---*/
+
 .terapia{
     background-image: url("../img/img-fondo-bluesnow.webp");
     background-attachment: fixed;
@@ -151,14 +154,15 @@ p{
 .terapia p::first-letter{
     font-size: 50px;
 }
-.terapia div h3{
+.terapia div h2{
     font-size: 46px;
     font-weight: normal;
-    color: white;
+    color: rgb(8, 158, 218);
     margin: 15px;
 }
 .terapia div img{
     width: 350px;
+    height: 450px;
     margin-left: 20%;
     border-radius: 20px;
     padding: 10px;
@@ -187,7 +191,7 @@ p{
 .porque-terapia p::first-letter{
     font-size: 50px;
 }
-.porque-terapia div h3{
+.porque-terapia div h2{
     font-size: 46px;
     font-weight: normal;
     color: rgb(8, 158, 218);
@@ -196,6 +200,8 @@ p{
 }
 .porque-terapia img{
     width: 634px;
+    height: 500px;
+    margin-top: 7%;
     border-radius: 20px;
     padding: 10px;
 }
@@ -224,7 +230,7 @@ p{
 .esperar-terapia p::first-letter{
     font-size: 50px;
 }
-.esperar-terapia div h3{
+.esperar-terapia div h2{
     font-size: 46px;
     font-weight: normal;
     color: rgb(8, 158, 218);
@@ -233,6 +239,8 @@ p{
 }
 .esperar-terapia img{
     width: 634px;
+    height: 500px;
+    margin-top: 9%;
     border-radius: 20px;
     padding: 10px;
 }
@@ -242,10 +250,14 @@ p{
     grid-template-rows: 100%;
     margin: 50px;
 }
-.grid-foto{
+/* .grid-foto{
     padding: 5px;
     justify-self: center;
-}
+} */
+/* .grid-palabras div img{
+    padding: 5px;
+    justify-self: center;
+} */
 .servicios{
     background-image: url("../img/img-fondo-bluesnow.webp");
     background-attachment: fixed;
