--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,6 @@
 /*VARIABLES*/
+/*LISTAS*/
+/* EXTENDS */
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
@@ -18,580 +20,12 @@
   border: 2px;
   padding: 12px;
   border-radius: 20px;
+  transition-property: all;
+  transition-duration: 1s;
 }
 .boton:hover {
   background-color: white;
   color: skyblue;
-}
-
-header {
-  background-color: white;
-  background-image: url("../img/img-fondo.webp");
-  padding: 10px;
-  position: sticky;
-  top: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 1;
-}
-header h1 img {
-  width: 170px;
-  height: 170px;
-}
-header nav ul {
-  list-style: none;
-  display: flex;
-}
-header nav li {
-  margin: 5px 7px 10px 7px;
-}
-header nav a {
-  text-decoration: none;
-}
-header nav a:hover {
-  color: skyblue;
-}
-
-.barra li a {
-  color: black;
-  letter-spacing: 0, 5cm;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 13px;
-  font-weight: 700;
-  letter-spacing: 4px;
-}
-
-.hero {
-  width: 100%;
-  height: 500px;
-  background-image: url(../img/img-presentacion.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-.hero div {
-  width: 100%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.hero h2 {
-  color: white;
-  background-color: rgba(0, 0, 0, 0.164);
-  font-family: cursive;
-  font-family: "Bitter", serif;
-  font-weight: 350;
-  font-size: 80px;
-  margin-bottom: 0px;
-  border-radius: 50px;
-}
-.hero p {
-  background-color: white;
-  color: black;
-  font-size: 27px;
-  font-family: impact, sans-serif;
-  font-style: italic;
-  font-weight: normal;
-  margin-top: 8%;
-  border-radius: 50px;
-  padding: 8px;
-}
-
-.boton-a {
-  background-color: skyblue;
-  color: white;
-  font-size: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  text-decoration: none;
-  padding: 15px;
-  padding-left: 20px;
-  padding-right: 20px;
-  border-radius: 20px;
-  margin-top: 9%;
-}
-.boton-a:hover {
-  background-color: white;
-  color: skyblue;
-}
-
-body {
-  background-color: white;
-  background-image: url("../img/img-fondo.webp");
-}
-
-body {
-  font-family: "Raleway";
-}
-
-h2 {
-  color: rgb(8, 158, 218);
-  font-size: 46px;
-  font-weight: normal;
-  border: black 10px;
-  margin: 20px;
-  padding: 20px;
-  background-clip: content-box;
-}
-
-p {
-  color: black;
-}
-
-.terapia {
-  background-image: url("../img/img-fondo-bluesnow.webp");
-  background-attachment: fixed;
-  display: flex;
-  margin: 30px;
-  flex-direction: row-reverse;
-}
-.terapia div {
-  width: 50%;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-}
-.terapia div h2 {
-  color: rgb(8, 158, 218);
-  font-size: 46px;
-  font-weight: normal;
-  border: black 10px;
-  margin: 20px;
-  padding: 20px;
-  background-clip: content-box;
-}
-.terapia div p {
-  background-color: white;
-  font-weight: lighter;
-  font-size: 20px;
-  word-spacing: 2px;
-  margin-bottom: 20px;
-  text-align: justify;
-  padding: 15px;
-  margin-right: 20%;
-}
-.terapia div p::first-letter {
-  font-size: 50px;
-}
-.terapia div img {
-  width: 350px;
-  margin-left: 20%;
-  border-radius: 20px;
-  padding: 10px;
-}
-
-.porque-terapia {
-  background-image: url("../img/img-fondo-bluesnow.webp");
-  background-attachment: fixed;
-  display: flex;
-  margin: 30px;
-}
-.porque-terapia div {
-  width: 50%;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-}
-.porque-terapia div h3 {
-  font-size: 46px;
-  font-weight: normal;
-  color: rgb(8, 158, 218);
-  margin: 15px;
-  text-align: center;
-}
-.porque-terapia div p {
-  background-color: white;
-  font-weight: lighter;
-  font-size: 20px;
-  word-spacing: 2px;
-  margin-bottom: 20px;
-  text-align: justify;
-  padding: 15px;
-}
-.porque-terapia div p::first-letter {
-  font-size: 50px;
-}
-.porque-terapia img {
-  width: 634px;
-  border-radius: 20px;
-  padding: 10px;
-}
-
-.esperar-terapia {
-  background-image: url("../img/img-fondo-bluesnow.webp");
-  background-attachment: fixed;
-  display: flex;
-  margin: 30px;
-  flex-direction: row-reverse;
-}
-.esperar-terapia div {
-  width: 50%;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-}
-.esperar-terapia div h3 {
-  font-size: 46px;
-  font-weight: normal;
-  color: rgb(8, 158, 218);
-  margin: 15px;
-  text-align: center;
-}
-.esperar-terapia div p {
-  background-color: rgb(255, 255, 255);
-  font-weight: lighter;
-  font-size: 20px;
-  word-spacing: 2px;
-  margin-bottom: 20px;
-  text-align: justify;
-  padding: 15px;
-}
-.esperar-terapia div p::first-letter {
-  font-size: 50px;
-}
-.esperar-terapia img {
-  width: 634px;
-  border-radius: 20px;
-  padding: 10px;
-}
-
-.grid-palabras {
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 100%;
-  margin: 50px;
-}
-
-.grid-foto {
-  padding: 5px;
-  justify-self: center;
-}
-
-.servicios {
-  background-image: url("../img/img-fondo-bluesnow.webp");
-  background-attachment: fixed;
-  padding: 20px;
-}
-.servicios h2 {
-  text-align: center;
-}
-.servicios .servicios-psico {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.servicios .servicios-psico div {
-  border: 1px solid gray;
-  width: 350px;
-  height: 400px;
-  text-align: center;
-  margin: 20px;
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-}
-.servicios .servicios-psico div h3 {
-  color: rgb(8, 158, 218);
-  font: 16px;
-  padding-bottom: 20px;
-  font-weight: 600;
-}
-.servicios .servicios-psico div img {
-  width: 340px;
-  padding-bottom: 20px;
-  border-radius: 15px;
-}
-
-.foto {
-  height: 500px;
-  background-image: url("../img/img-3.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-.grid-pie {
-  background-image: url("../img/img-fondo.webp");
-  padding: 20px;
-  display: grid;
-  justify-content: space-evenly;
-  align-items: center;
-  align-content: center;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  column-gap: 80px;
-}
-.grid-pie .grid1 {
-  align-self: start;
-}
-.grid-pie .grid2 {
-  justify-self: center;
-}
-.grid-pie .grid2 h2 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-style: normal;
-  font-size: 30px;
-  font-weight: 500;
-  color: black;
-}
-.grid-pie .grid2 p {
-  font-weight: 500;
-  margin: 20px 7px 10px 7px;
-}
-.grid-pie .grid2 img {
-  width: 23px;
-  height: 23px;
-  position: absolute;
-  left: 7cm;
-}
-.grid-pie a img {
-  width: 70px;
-  height: 70px;
-}
-.grid-pie img {
-  width: 150px;
-  height: 150px;
-}
-.grid-pie .whatsapp {
-  position: fixed;
-  bottom: 50px;
-  right: 50px;
-}
-.grid-pie .grid3 nav ul li {
-  list-style: none;
-  margin: 5px 7px 10px 7px;
-}
-.grid-pie .grid3 nav ul li a {
-  color: black;
-  letter-spacing: 0, 5cm;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 13px;
-  font-weight: 700;
-  letter-spacing: 4px;
-  justify-self: center;
-  text-decoration: none;
-}
-.grid-pie .grid3 nav ul li a:hover {
-  color: skyblue;
-}
-.grid-pie .grid4 {
-  justify-self: right;
-}
-
-/*! MEDIA QUERIES */
-@media screen and (max-width: 806px) {
-  header {
-    flex-direction: column;
-  }
-}
-@media screen and (max-width: 806px) {
-  header nav ul {
-    flex-direction: column;
-  }
-}
-@media screen and (max-width: 806px) {
-  .hero {
-    flex-direction: column;
-    width: 100%;
-  }
-  .hero h2 {
-    font-size: 40px;
-    margin-right: 9%;
-  }
-  .hero img {
-    width: 500px;
-  }
-  .hero p {
-    margin-right: 5%;
-    font-size: 13px;
-  }
-  .hero a {
-    font-size: 10px;
-    margin-right: 5%;
-  }
-}
-@media screen and (max-width: 806px) {
-  .terapia {
-    flex-direction: column;
-  }
-  .terapia div h2 {
-    font-size: 25px;
-    margin-left: 40%;
-    width: 150%;
-  }
-  .terapia div img {
-    width: 150px;
-    margin-left: 48%;
-  }
-  .terapia div p {
-    font-size: 16px;
-    width: 150%;
-    margin-left: 35%;
-  }
-}
-@media screen and (max-width: 806px) {
-  .porque-terapia {
-    flex-direction: column;
-    align-items: center;
-  }
-  .porque-terapia div {
-    margin-right: 35%;
-  }
-  .porque-terapia div h3 {
-    font-size: 27px;
-    width: 200%;
-    margin-left: -10%;
-  }
-  .porque-terapia div p {
-    font-size: 16px;
-    width: 185%;
-  }
-  .porque-terapia img {
-    width: 300px;
-  }
-}
-@media screen and (max-width: 806px) {
-  .esperar-terapia {
-    flex-direction: column;
-    align-items: center;
-  }
-  .esperar-terapia div {
-    margin-right: 30%;
-  }
-  .esperar-terapia div h3 {
-    font-size: 27px;
-    width: 150%;
-  }
-  .esperar-terapia div p {
-    font-size: 16px;
-    width: 175%;
-  }
-  .esperar-terapia img {
-    width: 300px;
-  }
-}
-@media screen and (max-width: 806px) {
-  .grid-foto {
-    display: none;
-  }
-}
-@media screen and (max-width: 806px) {
-  .servicios .servicios-psico div img {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 806px) {
-  .foto {
-    display: none;
-  }
-}
-@media screen and (max-width: 895px) {
-  .grid-pie {
-    flex-direction: column;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    justify-self: center;
-    row-gap: 0px;
-  }
-  .grid-pie a img {
-    width: 50px;
-    height: 50px;
-  }
-  .grid-pie .grid1 img {
-    margin-left: 25%;
-    margin-top: 27%;
-  }
-  .grid-pie .grid2 h2 {
-    margin-left: 25%;
-    margin-bottom: 15%;
-  }
-  .grid-pie .grid2 p {
-    margin-left: 12%;
-  }
-  .grid-pie .grid2 img {
-    margin-left: -65%;
-  }
-  .grid-pie .grid3 nav ul {
-    flex-direction: column;
-  }
-}
-@media screen and (max-width: 404px) {
-  .grid-pie .grid4 iframe {
-    width: 90%;
-  }
-}
-@media screen and (max-width: 1200px) {
-  .perfil-jenni {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    overflow-x: hidden;
-  }
-  .perfil-jenni div h2 {
-    font-size: 27px;
-    text-align: center;
-    margin-left: 50%;
-  }
-  .perfil-jenni div p {
-    font-size: 16px;
-    width: 215%;
-  }
-  .perfil-jenni div img {
-    width: 350px;
-    height: 450px;
-    object-fit: cover;
-  }
-  .grid-pie1 {
-    grid-template-rows: 1fr;
-  }
-  .grid-pie1 .logo-pie2 {
-    margin-left: 40%;
-  }
-}
-@media screen and (max-width: 500px) {
-  .turnos div h2 {
-    font-size: 23px;
-    margin-left: 3%;
-    text-align: center;
-  }
-  .grid-pie2 {
-    grid-template-rows: 1fr;
-  }
-  .grid-pie2 .logo-pie3 {
-    margin-left: 30%;
-  }
-}
-@media screen and (max-width: 386px) {
-  .preguntas-frecuentes-barra {
-    position: static;
-  }
-}
-@media screen and (max-width: 380px) {
-  .preguntas-frecuentes div h2 {
-    font-size: 23px;
-    margin-left: 22%;
-  }
-}
-@media screen and (max-width: 386px) {
-  .accordion-item h2 {
-    margin-left: 6%;
-  }
-}
-@media screen and (max-width: 386px) {
-  .grid-pie3 {
-    grid-template-rows: 1fr;
-  }
-  .grid-pie3 .logo-pie1 {
-    margin-left: 30%;
-  }
 }
 
 /*# sourceMappingURL=estilos.css.map */
