cambios para la tercera pre entrega

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,31 +1,17 @@
-/*VARIABLES*/
-/*LISTAS*/
-/* EXTENDS */
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bitter:ital,wght@0,100..900;1,100..900&family=Cinzel:wght@400..900&family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 7 | @import "./perfil";
+ *   |         ^^^^^^^^^^
+ *   '
+ *   scss\estilos.scss 7:9  root stylesheet */
 
-.boton {
-  background-color: skyblue;
-  color: white;
-  text-decoration: none;
-  font-weight: 600;
-  border: 2px;
-  padding: 12px;
-  border-radius: 20px;
-  transition-property: all;
-  transition-duration: 1s;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 7 \2502  @import \"./perfil\";\a   \2502          ^^^^^^^^^^\a   \2575 \a   scss\\estilos.scss 7:9  root stylesheet";
 }
-.boton:hover {
-  background-color: white;
-  color: skyblue;
-}
-
-/*# sourceMappingURL=estilos.css.map */
