--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -8,6 +8,25 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: white;
+    background-image: url("../img/img-fondo.webp");
+}
+body{
+    font-family: 'Raleway';
+}
+h2{
+    color: rgb(8, 158, 218);
+    font-size: 46px;
+    font-weight: normal;
+    border: black 10px;
+    margin: 20px;
+    padding: 20px;
+    background-clip: content-box;
+}
+p{
+    color: black;
+}
 .boton{
     background-color: skyblue;
     color: white;
